--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/Theme.DIOToDoList">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            >
+        </activity>
+        <activity android:name=".ui.AddTaskActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
