--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DIOToDoList">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
+            android:exported="true"
             >
-        </activity>
-        <activity android:name=".ui.AddTaskActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.AddTaskActivity" />
+
     </application>
 
 </manifest>
